[gd_scene format=3 uid="uid://bxowhdipby01y"]

[ext_resource type="Script" uid="uid://cxk51c61jcfs6" path="res://scenes/world/world.gd" id="1_dphjl"]
[ext_resource type="Script" uid="uid://brostpx61id5" path="res://scenes/world/sun.gd" id="2_1fp7r"]
[ext_resource type="PackedScene" uid="uid://6vn8sqah7yl" path="res://scenes/player/player.tscn" id="2_sl2e5"]
[ext_resource type="Texture2D" uid="uid://d1c27vsxlh1bx" path="res://assets/pointer.png" id="4_6m72w"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_6m72w"]
sky_top_color = Color(0.1575101, 0.46871263, 0.7101774, 1)
ground_bottom_color = Color(0.15686275, 0.47058824, 0.70980394, 1)

[sub_resource type="Sky" id="Sky_v5dby"]
sky_material = SubResource("ProceduralSkyMaterial_6m72w")

[sub_resource type="Environment" id="Environment_dphjl"]
sky = SubResource("Sky_v5dby")
ambient_light_source = 3
ambient_light_color = Color(0.47007608, 0.47007573, 0.47007596, 1)
fog_mode = 1
fog_light_color = Color(0.15686275, 0.47058824, 0.70980394, 1)
fog_density = 1.0

[node name="World" type="Node3D" unique_id=448434815]
script = ExtResource("1_dphjl")
world_seed = "semilla"

[node name="Sun" type="DirectionalLight3D" parent="." unique_id=969201157]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 20, 0)
script = ExtResource("2_1fp7r")

[node name="WorldEnvironment" type="WorldEnvironment" parent="." unique_id=669206625]
environment = SubResource("Environment_dphjl")

[node name="ChunksRoot" type="Node3D" parent="." unique_id=1140722680]

[node name="Players" type="Node3D" parent="." unique_id=128847087]

[node name="Player" parent="Players" unique_id=1437932268 instance=ExtResource("2_sl2e5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 40, 0)

[node name="DebugInfo" type="Control" parent="." unique_id=1961514634]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DebugInfo" unique_id=917516350]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FPS" type="HBoxContainer" parent="DebugInfo/VBoxContainer" unique_id=1926021452]
layout_mode = 2

[node name="Label" type="Label" parent="DebugInfo/VBoxContainer/FPS" unique_id=1698697420]
layout_mode = 2
text = "FPS: "

[node name="FPSLabel" type="Label" parent="DebugInfo/VBoxContainer/FPS" unique_id=680989509]
unique_name_in_owner = true
layout_mode = 2

[node name="LoadQueue" type="HBoxContainer" parent="DebugInfo/VBoxContainer" unique_id=123472729]
layout_mode = 2

[node name="Label" type="Label" parent="DebugInfo/VBoxContainer/LoadQueue" unique_id=633853129]
layout_mode = 2
text = "Chunks queue: "

[node name="ChunkQueueLabel" type="Label" parent="DebugInfo/VBoxContainer/LoadQueue" unique_id=1871577594]
unique_name_in_owner = true
layout_mode = 2

[node name="UnloadQueue" type="HBoxContainer" parent="DebugInfo/VBoxContainer" unique_id=663180933]
layout_mode = 2

[node name="Label" type="Label" parent="DebugInfo/VBoxContainer/UnloadQueue" unique_id=471515605]
layout_mode = 2
text = "Unload queue: "

[node name="UnloadQueueLabel" type="Label" parent="DebugInfo/VBoxContainer/UnloadQueue" unique_id=379168289]
unique_name_in_owner = true
layout_mode = 2

[node name="Coord" type="HBoxContainer" parent="DebugInfo/VBoxContainer" unique_id=2124549543]
layout_mode = 2

[node name="Label" type="Label" parent="DebugInfo/VBoxContainer/Coord" unique_id=853653291]
layout_mode = 2
text = "Coordinates:"

[node name="CoordsLabel" type="Label" parent="DebugInfo/VBoxContainer/Coord" unique_id=918137607]
unique_name_in_owner = true
layout_mode = 2

[node name="ChunkCoord" type="HBoxContainer" parent="DebugInfo/VBoxContainer" unique_id=407948346]
layout_mode = 2

[node name="Label" type="Label" parent="DebugInfo/VBoxContainer/ChunkCoord" unique_id=1951398121]
layout_mode = 2
text = "Chunk:"

[node name="ChunkLabel" type="Label" parent="DebugInfo/VBoxContainer/ChunkCoord" unique_id=1595962357]
unique_name_in_owner = true
layout_mode = 2

[node name="Pointer" type="Control" parent="." unique_id=358018966]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Pointer" unique_id=376748493]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_6m72w")

[node name="ChunkUnloadTimer" type="Timer" parent="." unique_id=1975183994]
autostart = true

[connection signal="timeout" from="ChunkUnloadTimer" to="." method="_on_chunk_unload_timer_timeout"]
